[tool.poetry]
name = "personalize_commons"
version = "1.0.0"
description = "Common utilities for microservices"
authors = ["dheeban.m"]
license = "MIT"
packages = [{ include = "personalize_commons" }]  # ✅ match folder name
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
boto3 = ">=1.39.4,<2.0.0"
botocore = ">=1.39.4,<2.0.0"
pydantic = ">=2.11.7,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
